# aoc2023

./: README.md
day1/: Cargo.toml
day1/benches/: day1_benchmark.rs
day1/src/: lib.rs  main.rs
day15/: Cargo.toml
day15/benches/: day15_benchmark.rs
day15/src/: lib.rs  main.rs
day2/: Cargo.toml
day2/benches/: day2_benchmark.rs
day2/src/: lib.rs  main.rs
day3/: Cargo.toml
day3/benches/: day3_benchmark.rs
day3/src/: lib.rs  main.rs
day4/: Cargo.toml
day4/benches/: day4_benchmark.rs
day4/src/: lib.rs  main.rs
day5/: Cargo.toml
day5/benches/: day5_benchmark.rs
day5/src/: lib.rs  main.rs
day6/: Cargo.toml
day6/benches/: day6_benchmark.rs
day6/src/: lib.rs  main.rs
