[package]
name = "day5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
rayon = "1.8.0"
winnow = { version = "0.5.25", features = ["simd"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "day5_benchmark"
harness = false
